Fixed some stuff on the verification end

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,6 +129,11 @@
         background: var(--color-orange-200);
     }
 
+    .bg-orange:hover {
+        background-color: var(--color-black);
+        color: var(--color-orange-200);
+    }
+
     .outline-orange {
         outline: var(--color-orange-200);
     }
