--- a/templates/team.html
+++ b/templates/team.html
@@ -5,7 +5,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
-
+<link rel="stylesheet" href="{% static 'css/bootstrap-treeview.css' %}">
 <script type="text/javascript" src="{% static 'js/luxon.min.js' %}"></script>
 <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script>
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block body %}
-<ul class="nav nav-tabs my-2" id="tab" role="tablist">
+<ul class="nav nav-tabs my-3" id="tab" role="tablist">
     <li class="nav-item">
         <button class="nav-link active mx-1" id="referrals-tab" data-toggle="tab" href="#referrals" aria-controls="referrals" aria-selected="true">{% trans "Referrals" %}</button>
     </li>
@@ -39,7 +39,11 @@
 
 <div class="tab-content" id="tab-content">
     <div class="tab-pane fade show" id="referral-team" role="tabpanel" aria-labelledby="referral-team-tab">
+        <div class="col-md-12">
+            <div id="referral-team-tree-view">
 
+            </div>
+        </div>
     </div>
 
     <div class="tab-pane fade show active" id="referrals" role="tabpanel" aria-labelledby="referrals-tab">
@@ -123,4 +127,9 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block js %}
+<script src="{% static 'js/bootstrap-treeview.js' %}"></script>
+<script src="{% static 'js/team.js' %}"></script>
 {% endblock %}
