--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,14 +8,14 @@
 <div class="analytics section-border-radius">
     <h3 class="section-header">Analytics Overview</h3>
     <div class="list-analytics">
-        <div class="analytic a">
+        <div class="analytic a" id="beneficiary-stats">
             <span class="icon">
                 <i class="fas fa-volume-up"></i>
             </span>
             <h3 class="num">30</h3>
             <p class="desc">{% trans 'Number of effective referrals' %}</p>
         </div>
-        <div class="analytic b">
+        <div class="analytic b" id="sub-referrer-stats">
             <span class="icon">
                 <i class="fas fa-users"></i>
             </span>
@@ -26,7 +26,7 @@
                 <span class="value">4</span>
             </span>
         </div>
-        <div class="analytic c">
+        <div class="analytic c" id="earnings-stat">
             <span class="icon">
                 <i class="fas fa-dollar-sign"></i>
             </span>
@@ -37,7 +37,7 @@
                 <span class="value">12.42%</span>
             </span>
         </div>
-        <div class="analytic d">
+        <div class="analytic d" id="engagement-rate-stats">
             <span class="icon">
                 <i class="fas fa-hand-pointer"></i>
             </span>
