--- a/templates/login-2.html
+++ b/templates/login-2.html
@@ -30,6 +30,7 @@
     <!-- Favicon links end -->
 
     <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css' %}">
 
     <style>
         * {
@@ -255,6 +256,11 @@
             height: 100%;
         }
 
+        #messages {
+            position: absolute;
+            top: 0;
+        }
+
         @media only screen and (max-width: 700px) {
             html {
                 font-size: 54.5%;
@@ -297,20 +303,18 @@
 </head>
 
 <body>
+    <div class="row my-3 w-50 justify-content-center" id="messages">
+        {% for error in errors %}
+        <div class="alert alert-danger alert-dismissible" role="alert">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
     <div class="container">
         <main class="signup-container">
             <h1 class="heading-primary">Log in<span class="span-blue">.</span></h1>
             <p class="text-mute">Enter your credentials to access your account.</p>
             <div class="login-wrapper">
-                <!-- <a href="#" class="btn btn-google">
-                    <img src="https://img.icons8.com/fluency/48/000000/google-logo.png" />
-                    Log In with Google
-                </a>
-                <div class="line-breaker">
-                    <span class="line"></span>
-                    <span>or</span>
-                    <span class="line"></span>
-                </div> -->
             </div>
             <div>
                 {% if form.errors %}
