--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,10 +21,10 @@
             </span>
             <h3 class="num">4</h3>
             <p class="desc">{% trans 'Sub referrers' %}</p>
-            <span class="percent up">
+            <!-- <span class="percent up">
                 <i class="fas fa-users"></i>
                 <span class="value">4</span>
-            </span>
+            </span> -->
         </div>
         <div class="analytic c" id="earnings-stat">
             <span class="icon">
@@ -32,12 +32,12 @@
             </span>
             <h3 class="num">30000</h3>
             <p class="desc">{% trans 'Total earned' %}</p>
-            <span class="percent down">
+            <!-- <span class="percent down">
                 <i class="fas fa-caret-down"></i>
                 <span class="value">12.42%</span>
-            </span>
+            </span> -->
         </div>
-        <div class="analytic d" id="engagement-rate-stats">
+        <!-- <div class="analytic d" id="engagement-rate-stats">
             <span class="icon">
                 <i class="fas fa-hand-pointer"></i>
             </span>
@@ -47,7 +47,7 @@
                 <i class="fas fa-caret-up"></i>
                 <span class="value">86.79%</span>
             </span>
-        </div>
+        </div> -->
     </div>
 </div>
 
