--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,9 @@
                     <div class="col-12 col-md-6 col-lg-5 left-card">
                         <h1>Earn money by inviting friends!</h1>
                         <p class="mt-lg-3 mt-xl-4 mb-xl-4 pt-1 pt-md-3 pt-lg-1 pb-2">Invite friends to Living Food & Drink (LFD) Services and stand a chance to get rewards as big as 154,710,000 FCFA. Visit us to cash out anytime.</p>
-                        <button class="pt-0 pt-lg-3 pb-lg-3 pl-5 pr-5">Check your wallet</button>
+                        <button class="pt-0 pt-lg-3 pb-lg-3 pl-5 pr-5">
+                            <a href="{% url 'wallet' %}">Check your wallet</a>
+                        </button>
                     </div>
                     <div class="col-12 col-md-6 col-lg-7 right-card">
                         <div class="hero-img-card mt-0 mt-md-4">
