--- a/templates/login-2.html
+++ b/templates/login-2.html
@@ -285,7 +285,7 @@
             }
 
             .label {
-                font-size: 1.9rem;
+                font-size: 1.4rem;
             }
         }
 
@@ -374,7 +374,7 @@
 <script src="{% static 'js/jquery-3.6.0.min.js ' %}"></script>
 <script src="{% static 'js/bootstrap/bootstrap.min.js ' %}"></script>
 <script src="{% static 'js/popper.min.js ' %}"></script>
-<script src="{% static 'https://kenwheeler.github.io/slick/slick/slick.js ' %}"></script>
+<script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
 <script src="{% static 'js/owl.carousel.min.js ' %}"></script>
 </body>
 
