--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
-
+:root {
+    --sidebar-width: 160px
+}
 * {
     margin: 0;
     padding: 0;
@@ -61,7 +63,7 @@ a {
     top: 0;
     left: 0;
     min-height: 100vh;
-    width: 70px;
+    width: var(--sidebar-width);
 
     display: flex;
     flex-direction: column;
@@ -72,6 +74,20 @@ a {
 
     transition: transform 0.2s linear;
     height: 100%;
+}
+.main>.nav i {
+    width: 20%;
+}
+
+.main>.nav a {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main>.nav span {
+    padding-left: 1rem;
+    width: 80%;
+    text-align: left;
 }
 
 .main .burger-menu {
@@ -141,7 +157,7 @@ a {
 
 /* ::::::::::::::::::::::::::::: Content */
 .content {
-    padding-left: 70px;
+    padding-left: var(--sidebar-width);
 }
 
 .container {
