--- a/templates/team.html
+++ b/templates/team.html
@@ -23,8 +23,7 @@
 <style>
     .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, button.nav-link {
         background-color: inherit;
-        background: none;ERR_FAILED
-        
+        background: none;
     } 
 </style>
 {% endblock %}
