Person orders displayed

--- a/templates/base-template.html
+++ b/templates/base-template.html
@@ -250,6 +250,9 @@
         </div>
     </main>
 
+    {% block modals %}
+    {% endblock %}
+
     <script>
         feather.replace();
     </script>
