Removed the pwa stuff from the html pages

--- a/templates/team.html
+++ b/templates/team.html
@@ -1,6 +1,5 @@
 {% extends 'base-template.html' %}
-{% load i18n static pwa %}
-{% progressive_web_app_meta %}
+{% load i18n static %}
 
 {% block title %}{% trans "Team & Referrals" %}{% endblock %}
 {% block team_active %}active{% endblock %}
