--- a/templates/base-template.html
+++ b/templates/base-template.html
@@ -30,7 +30,7 @@
         <!-- Favicon links end -->
 
         <!-- css styles start -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap5/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/magaNav/reset.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/animate.css' %}">
@@ -39,8 +39,13 @@
         <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
         <link rel="stylesheet" href="{% static 'font-awesome/css/all.css' %}">
         <script src="{% static 'js/jquery-3.6.0.min.js ' %}"></script>
-        <script src="{% static 'js/bootstrap/bootstrap.min.js ' %}"></script>
+        <script src="{% static 'js/bootstrap5/bootstrap.min.js ' %}"></script>
         <script src="{% static 'js/functions.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/luxon.min.js' %}"></script>
+        <script>
+            const DateTime = luxon.DateTime
+            const LOCALE = 'en'
+        </script>
         <!-- css styles end -->
 
     <script src="https://unpkg.com/feather-icons"></script>
@@ -257,7 +262,6 @@
     </script>
 
 
-    <!-- js scripts start -->
     <script>
         let months = [
             "{% trans 'January' %}", "{% trans 'February' %}", "{% trans 'March' %}",
@@ -272,11 +276,6 @@
             "{% trans 'Sunday' %}"
         ]
     </script>
-    <!-- <script src="{% static 'js/popper.min.js ' %}"></script> -->
-    <!-- <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script> -->
-    <!-- <script src="{% static 'js/owl.carousel.min.js ' %}"></script> -->
-    <!-- <script src="{% static 'js/script.js ' %}"></script> -->
-    <!-- js scripts end -->
 
     {% block js %}
     {% endblock %}
