--- a/templates/team.html
+++ b/templates/team.html
@@ -7,7 +7,6 @@
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/bootstrap-treeview.css' %}">
-<script type="text/javascript" src="{% static 'js/luxon.min.js' %}"></script>
 <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script>
 <script>
@@ -30,10 +29,10 @@
 {% block body %}
 <ul class="nav nav-tabs my-3" id="tab" role="tablist">
     <li class="nav-item">
-        <button class="nav-link active mx-1" id="referrals-tab" data-toggle="tab" href="#referrals" aria-controls="referrals" aria-selected="true">{% trans "Referrals" %}</button>
+        <button class="nav-link active mx-1" id="referrals-tab" data-bs-toggle="tab" href="#referrals" aria-controls="referrals" aria-selected="true">{% trans "Referrals" %}</button>
     </li>
     <li class="nav-item">
-        <button class="nav-link mx-1" id="referral-team-tab" data-toggle="tab" href="#referral-team" aria-controls="referral-team" aria-selected="false">{% trans "Referral team" %}</button>
+        <button class="nav-link mx-1" id="referral-team-tab" data-bs-toggle="tab" href="#referral-team" aria-controls="referral-team" aria-selected="false">{% trans "Referral team" %}</button>
     </li>
 </ul>
 
@@ -84,19 +83,17 @@
 
 {% block modals %}
 <div class="modal fade" tabindex="-1" id="person-orders">
-    <div class="modal-dialog modal-lg" style="max-width: none;">
+    <div class="modal-dialog modal-fullscreen" style="max-width: none;">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title"></h5>
-                <button class="btn-close" data-dismiss="modal" aria-label="Close">
+                <button class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <div class="p-0 col-12 panel-group" id="person-orders-panel" role="tablist" aria-multiselectable="true">
-                    <div class="pr-md-3 pl-3 pr-xl-4 col-12" id="person-orders-panel-content">
+                <div class="accordion" id="person-orders-accordion">
 
-                    </div>
                 </div>
 <!-- 
                 <div class="row">
@@ -117,7 +114,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">{% trans "Close" %}</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">{% trans "Close" %}</button>
             </div>
         </div>
     </div>
