--- a/templates/wallet.html
+++ b/templates/wallet.html
@@ -18,12 +18,12 @@
         });
     })
 </script>
-<script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/bootstrap5/bootstrap.min.js' %}"></script>
 <style>
     .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, button.nav-link {
         background-color: inherit;
         background: none;
-    } 
+    }
 </style>
 {% endblock %}
 
